<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="start|end"
    android:foregroundGravity="left|right"
    android:visibility="visible"
    tools:context="ee.cvkeskus.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">


        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible"
            tools:layout_editor_absoluteX="14dp"
            tools:layout_editor_absoluteY="26dp">

            <TableRow
                android:id="@+id/Row1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <LinearLayout
                    android:layout_height="75dp"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <EditText
                            android:id="@+id/editText7"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:ems="10"
                            android:inputType="none"
                            android:maxLines="1"
                            android:text="@string/vip"
                            android:textAlignment="center"
                            android:textColor="?android:attr/colorPressedHighlight"
                            android:textSize="8sp"
                            android:visibility="visible"
                            tools:ignore="SmallSp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <EditText
                            android:id="@+id/editText3"
                            android:layout_width="46dp"
                            android:layout_height="30dp"
                            android:ems="10"
                            android:inputType="none"
                            android:text="@string/daysBefore"
                            android:textAlignment="center"
                            android:textColor="?attr/colorControlNormal"
                            android:textSize="8sp"
                            tools:ignore="SmallSp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <EditText
                            android:id="@+id/editText8"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="none"
                            android:text="@string/newOne"
                            android:textAlignment="center"
                            android:textColor="@android:color/holo_orange_dark"
                            android:textSize="8sp"
                            tools:ignore="SmallSp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="60dp"
                        android:layout_height="75dp"
                        android:contentDescription="@string/compname"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:visibility="visible"
                        app:srcCompat="@color/colorPrimary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editText2"
                            android:layout_width="125dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="none"
                            android:maxLines="1"
                            android:text="@string/vacancy"
                            android:textAlignment="viewStart"
                            android:textColor="?attr/colorPrimary"
                            android:textIsSelectable="true"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editText9"
                            android:layout_width="125dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="none"
                            android:paddingTop="5dp"
                            android:text="@string/compName"
                            android:textAlignment="viewStart"
                            android:textColor="@android:color/darker_gray"
                            android:textIsSelectable="true"
                            android:textSize="10sp"
                            tools:ignore="SmallSp"
                            tools:inputType="textPersonName" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <EditText
                            android:id="@+id/editText5"
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|fill_horizontal|center"
                            android:layout_weight="0.55"
                            android:ems="10"
                            android:gravity="center_vertical|center_horizontal|center"
                            android:inputType="none"
                            android:text="@string/city"
                            android:textAlignment="center"
                            android:textSize="12sp"
                            android:visibility="visible" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal|center"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editText10"
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="none"
                            android:text="@string/payment"
                            android:textAlignment="viewStart"
                            android:textSize="10sp"
                            android:visibility="visible"
                            tools:ignore="DuplicateIds,SmallSp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <EditText
                            android:id="@+id/editText6"
                            android:layout_width="50dp"
                            android:layout_height="25dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="none"
                            android:paddingTop="5dp"
                            android:text="@string/uploadDate"
                            android:textAlignment="center"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="8sp"
                            android:visibility="visible"
                            tools:ignore="SmallSp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <EditText
                            android:id="@+id/editText12"
                            android:layout_width="50dp"
                            android:layout_height="25dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="none"
                            android:paddingTop="5dp"
                            android:text="@string/daysRemain"
                            android:textAlignment="viewEnd"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="8sp"
                            android:visibility="visible"
                            tools:ignore="SmallSp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/favorite"
                        android:scaleType="fitCenter"
                        android:visibility="visible"
                        app:srcCompat="@android:drawable/btn_star_big_off" />
                </LinearLayout>

            </TableRow>

        </TableLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
